--- a/vendas.html
+++ b/vendas.html
@@ -9,6 +9,7 @@
     <h1>
         Página de Vendas
     </h1>
+    <p>Vendas = R$ 5.000,00</p>
     <a href="index.html">Voltar até a página inicial</a>
 </body>
 </html>
